Wed Jun 12 16:31:11 BST 2002  Olly Betts <olly@survex.com>

	* QuartzDbKey, QuartzDbTag: just use a string instead of a string
	  wrapped in a structure.  We've stopped inflicting this on external
	  developers (OmData, OmKey/OmValue) so why inflict it on ourselves?

Wed Jun 12 12:26:04 BST 2002  Olly Betts <olly@survex.com>

	* Btree_item: use C++ strings rather than trying to reimplement them.

	* Fix a few warnings about unused parameters.

Wed Jun 12 02:53:16 BST 2002  Olly Betts <olly@survex.com>

	* Btree_full_compaction, Btree_close: removed - they just wrap methods
	  of Btree.

Wed Jun 12 02:28:30 BST 2002  Olly Betts <olly@survex.com>

	* Btree_item_create and Btree_item_lose subsumed into Btree_item
	  and ~Btree_item.

	* Pass C++ strings rather than const char * into various Btree open
	  methods.

	* Removed pointless wrapper functions for Btree open methods.

	* Btree_quit removed (just use delete directly).

	* Btree_create removed (just use Btree::create directly).

Wed Jun 12 00:48:52 BST 2002  Olly Betts <olly@survex.com>

	* form_key is now a method of Btree; more passing of strings rather
	  than pointer/length pairs); buffer overrun check added to btreetest.

Tue Jun 11 18:04:08 BST 2002  Olly Betts <olly@survex.com>

	* More C++ like interfaces (e.g. bool returns, strings rather than
	  pointer/length pairs).

Tue Jun 11 16:40:08 BST 2002  Richard Boulton <richard@tartarus.org>

	* quartz/btree.cc: Fix so that it compiles when BTREE_FULL_DEBUG is on,
	  and added a couple of Assert()s.

Tue Jun 11 13:09:39 BST 2002  Olly Betts <olly@survex.com>

	* Removed a number of btree functions which were simply wrappers for
	  calling methods on their first parameter, and most of which weren't
	  even used!

	* btree_api.txt: updated to better reflect the object-ized API.

Tue Jun 11 02:01:53 BST 2002  Olly Betts <olly@survex.com>

	* Btree::make_index_item(): Added check for buffer overflow.

Tue Jun 11 01:49:51 BST 2002  Olly Betts <olly@survex.com>
