@@ -1,3 +1,7 @@
+Fri Jun 14 16:33:08 BST 2002  Olly Betts <olly@survex.com>
+
+	* backends/quartz/quartz_database.cc: Cosmetic changes.
+
 Wed Jun 12 16:31:11 BST 2002  Olly Betts <olly@survex.com>
 
 	* QuartzDbKey, QuartzDbTag: just use a string instead of a string
